# qt-solutions

qtsingleapplication/: CMakeLists.txt  common.pri
qtsingleapplication/src/: qtlocalpeer.cpp  qtlocalpeer.h  qtlockedfile.cpp  qtlockedfile.h  qtlockedfile_unix.cpp  qtlockedfile_win.cpp  qtsingleapplication.cpp  qtsingleapplication.h  qtsingleapplication.pri  qtsinglecoreapplication.cpp  qtsinglecoreapplication.h
