CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
IF(POLICY CMP0020)
	CMAKE_POLICY(SET CMP0020 OLD)
ENDIF()

PROJECT(QtSingleApplication)

FIND_PACKAGE(Qt5 COMPONENTS Core Network Widgets REQUIRED)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(HEADERS
	src/qtlocalpeer.h
	src/qtsingleapplication.h
	src/qtsinglecoreapplication.h
)

SET(SOURCES
	src/qtlocalpeer.cpp
	src/qtsingleapplication.cpp
	src/qtsinglecoreapplication.cpp
)

ADD_LIBRARY(QtSolutions_SingleApplication SHARED
	${SOURCES}
	${HEADERS}
)

ADD_DEFINITIONS(-DQT_QTSINGLEAPPLICATION_EXPORT)

QT5_USE_MODULES(QtSolutions_SingleApplication Core Network Widgets)

IF(STANDALONE_EXTERN_BUILD)

	INSTALL(TARGETS QtSolutions_SingleApplication
		RUNTIME DESTINATION ${EXTERN_BIN_DIRECTORY}
		LIBRARY DESTINATION ${EXTERN_BIN_DIRECTORY}
		ARCHIVE DESTINATION ${EXTERN_LIB_DIRECTORY}
	)

ELSE(STANDALONE_EXTERN_BUILD)

	IF(UNIX AND NOT APPLE)
		INSTALL(TARGETS QtSolutions_SingleApplication
			RUNTIME DESTINATION /usr/local/movial/lib
			LIBRARY DESTINATION /usr/local/movial/lib
			)
	ELSE(UNIX AND NOT APPLE)
		INSTALL(TARGETS QtSolutions_SingleApplication
			RUNTIME DESTINATION .
			LIBRARY DESTINATION .
			)
	ENDIF(UNIX AND NOT APPLE)

ENDIF(STANDALONE_EXTERN_BUILD)

